# airtable360G

./: .gitignore  LICENSE  README.md  pyproject.toml
mappings/: example.yaml
samples/: geographic_units.csv  grants.csv
src/airtable360g/: loader.py  main.py  transformer.py  writer.py
